--- a/index.html
+++ b/index.html
@@ -9,15 +9,79 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<main>
+  <section>
     <div class="light container">
       <img
         class="light_bulb"
-        src="https://www.gelighting.com/sites/default/files/styles/small_hq/public/image/2022-05/bulb-sizes.jpg?itok=FxosrNxx"
-        alt="light bulb"
-        width="500"
-        height="600"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
       />
-      >
     </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+  </section>
+  <section>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+  </section>
+  <section>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+    <div class="light container">
+      <img
+        class="light_bulb"
+        src="https://content.presentermedia.com/files/clipart/00014000/14170/light_bulb_sketch_800_wht.jpg"
+        alt="light bulbs"
+      />
+    </div>
+  </section>
+</main>
+
+
+    
   </body>
 </html>
